[package]
name = "stm32h750vb-embassy-examples"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt= "0.4"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
panic-probe = "0.3.2"

embassy-embedded-hal = { version = "0.3.0", default-features = false }
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-stm32 = { version = "0.2.0", features = [
  "stm32h750vb",
  "memory-x",
  "defmt",
  "time-driver-tim2",
  "exti",
  "unstable-pac"
] }
embassy-time = { version = "0.4.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

[dev-dependencies]
embedded-graphics = "0.8.1"
defmt = { version = "0.3.8"}
defmt-rtt= "0.4"
st7735-embassy = { git = "https://github.com/kalkyl/st7735-embassy" }
tinybmp = "0.6.0"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
edrv-st7735 = "0.0.1"